# cluck

./: .gitignore  CMakeLists.txt  DESIGN.MD  README.MD
Common/: CMakeLists.txt
Common/Common/: BitCast.h  Endian.cpp  Endian.h  MathsUtil.h  TakeFirst.h
Frontend/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  GlkGlulxClient.cpp  GlkGlulxClient.h  GlkInputOutputSystem.cpp  GlkInputOutputSystem.h  main.cpp
GlkServer/: CMakeLists.txt  GlkClient.h  GlkMain.cpp  GlkServer.cpp  GlkServer.h
GlkServer/Array/: GlkArrayRegistry.cpp  GlkArrayRegistry.h
GlkServer/Impl/: GlkServerImpl.cpp  GlkServerImpl.h
GlkServer/Impl/Call/: GlkCall.cpp
GlkServer/Impl/Call/Ops/: GlkCase.cpp  GlkEvent.cpp  GlkFileref.cpp  GlkHyperlink.cpp  GlkImage.cpp  GlkMiscellaneous.cpp  GlkRead.cpp  GlkSelect.cpp  GlkSoundChannel.cpp  GlkStream.cpp  GlkStyle.cpp  GlkTime.cpp  GlkWindow.cpp  GlkWrite.cpp
GlkServer/Impl/CallDirect/: GlkCallDirect.cpp
GlkServer/Object/: GlkObjectRegistry.cpp  GlkObjectRegistry.h
GlkServer/ProgramArguments/: GlkProgramArguments.h
GlkServer/Util/: TakeFirst.h
Glulx/: CMakeLists.txt  Glulx.cpp  Glulx.h  GlulxInputOutputSystem.h
Glulx/Impl/: GlulxError.cpp  GlulxError.h  GlulxImpl.cpp  GlulxImpl.h
Glulx/Impl/Blorb/: GlulxBlorbRead.cpp  GlulxBlorbRead.h
Glulx/Impl/Components/Acceleration/: GlulxAcceleration.cpp  GlulxAcceleration.h  GlulxAccelerationFunctions.cpp  GlulxAccelerationFunctions.h  GlulxAccelerationParams.h
Glulx/Impl/Components/Gestalt/: GlulxGestalt.cpp  GlulxGestalt.h
Glulx/Impl/Components/IO/: GlulxFilterInputOutputSystem.cpp  GlulxFilterInputOutputSystem.h  GlulxInputOutputSystems.cpp  GlulxInputOutputSystems.h  GlulxNullInputOutputSystem.h
Glulx/Impl/Components/Memory/: GlulxMemory.cpp  GlulxMemory.h
Glulx/Impl/Components/Random/: GlulxRandom.cpp  GlulxRandom.h
Glulx/Impl/Components/Stack/: GlulxStack.cpp  GlulxStack.h
Glulx/Impl/Components/Undo/: GlulxUndo.cpp  GlulxUndo.h
Glulx/Impl/Execute/: GlulxExecute.cpp  GlulxExecute.h  GlulxExecuteConstants.h
Glulx/Impl/Execute/ControlFlow/: GlulxCallReturn.cpp  GlulxCallReturn.h  GlulxCallStub.cpp  GlulxCallStub.h  GlulxFunction.cpp  GlulxFunction.h
Glulx/Impl/Execute/Instruction/: GlulxInstruction.cpp  GlulxInstruction.h  GlulxOperandLoad.cpp  GlulxOperandStore.cpp  GlulxOperandWrite.cpp
Glulx/Impl/Execute/Ops/: GlulxOps.h  GlulxOpsAcceleratedFunctions.cpp  GlulxOpsArray.cpp  GlulxOpsBlockCopyAndClear.cpp  GlulxOpsBranch.cpp  GlulxOpsBranchDouble.cpp  GlulxOpsBranchFloat.cpp  GlulxOpsContinuations.cpp  GlulxOpsDouble.cpp  GlulxOpsFloat.cpp  GlulxOpsFunctions.cpp  GlulxOpsGameState.cpp  GlulxOpsInteger.cpp  GlulxOpsMemoryAllocationHeap.cpp  GlulxOpsMemoryMap.cpp  GlulxOpsMiscellaneous.cpp  GlulxOpsMove.cpp  GlulxOpsOutput.cpp  GlulxOpsRandomNumberGenerator.cpp  GlulxOpsSearch.cpp  GlulxOpsStack.cpp
Glulx/Impl/Execute/Search/: GlulxSearch.cpp  GlulxSearch.h
Glulx/Impl/Execute/Stream/: GlulxStream.cpp  GlulxStream.h
Glulx/Impl/Header/: GlulxHeader.cpp  GlulxHeader.h
Glulx/Impl/Serial/: GlulxCompression.cpp  GlulxCompression.h  GlulxIff.cpp  GlulxIff.h  GlulxReadBuffer.cpp  GlulxReadBuffer.h  GlulxSerial.h  GlulxSerialRead.cpp  GlulxSerialWrite.cpp  GlulxWriteBuffer.cpp  GlulxWriteBuffer.h
Glulx/Util/: Endian.cpp  Endian.h  FloatingPoint.h  Integer.h  Version.h
Zork/: CMakeLists.txt  Zork.cpp  Zork.h
Zork/Impl/: ZorkCharacterStream.cpp  ZorkCharacterStream.h  ZorkError.cpp  ZorkError.h  ZorkImpl.cpp  ZorkImpl.h  ZorkImplBuffers.cpp  ZorkImplControlFlow.cpp  ZorkImplInstruction.cpp  ZorkImplPrint.cpp  ZorkImplString.h
Zork/Impl/Components/Dictionary/: ZorkDictionary.cpp  ZorkDictionary.h
Zork/Impl/Components/Memory/: ZorkMemory.cpp  ZorkMemory.h
Zork/Impl/Components/Objects/: ZorkObjects.cpp  ZorkObjects.h
Zork/Impl/Components/Random/: ZorkRandom.cpp  ZorkRandom.h
Zork/Impl/Components/Stack/: ZorkStack.cpp  ZorkStack.h
Zork/Impl/Components/Tokenizer/: ZorkTokenizer.cpp  ZorkTokenizer.h
Zork/Impl/Execute/: ZorkExecute.cpp  ZorkExecute.h
Zork/Impl/Header/: ZorkHeader.cpp  ZorkHeader.h
Zork/Util/: Integer.h
